added sound effect and accounted for a draw

--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
                         <div class="modal-body">
                             <h1 class="text-center" id="victory">You won!!</h1>
                             <h1 class="text-center" id="defeat">You lost :(</h1>
-                            <h1 class="text-center" id="teammateDisconnected">Your opponent got disconneccted</h1>
+                            <h1 class="text-center" id="teammateDisconnected">Your opponent left the game</h1>
                             <h1 class="text-center" id="playAgainText">Your opponent wants to play again</h1>
+                            <h1 class="text-center" id="tieText">This game was a draw</h1>
                             <div id="waiting" class="text-center">
                                 <h1 class="text-center" id="waiting">Waiting for your opponent to respond...</h1>
                                 <div class="spinner-grow text-muted"></div>
